--- a/styles.css
+++ b/styles.css
@@ -1,114 +1,274 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    background-color: black;
-}
-p{
-    color: white;
-}
-
-nav{
-    float: right;
-    margin: 3% 4% 0px 0px;
-    display: flex;
-    flex-direction: column;
-    min-height: 8vh;    
-    font-family: "Raleway", sans-serif;
-}
-
-.logo{
-    display: flex;
-    flex-direction: row-reverse;
-    color:white;
-    letter-spacing: 2px;
-    font-size: 24px;
-    margin-left: 30px;
-    border-bottom: 3px solid white;
-    padding-bottom: 6px;
-    width: fit-content;
-}
-
-.nav-links{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    transition: transform 0s ease-in;
+:root{
+  --select-border: #777;
+  --select-focus: blue;
+  --select-arrow: var(var(--select-border));
 }
 
 
 
-.nav-links li{
-    list-style: none;
-    margin-top: 30px;
-    margin-right: 40px;
-    opacity: 0;
-    text-align: end;
+
+
+
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  background-color: black;
+  color: white;
+}
+ p {
+  color: white;
+  font-weight: 400;
+  font-size: 20px;
+  font-family: "Raleway", sans-serif;
+}
+
+li {
+  list-style: none;
+  color: white;
+  font-weight: 400;
+  font-size: 20px;
+  font-family: "Raleway", sans-serif;
+}
+
+.select-button > p {
+  margin-left: 6px;
+}
+.select-button > svg {
+  margin-top: 4px;
+}
+
+nav {
+  position: relative;
+  z-index: 30;
+  float: right;
+  margin: 3% 4% 0px 0px;
+  display: flex;
+  flex-direction: column;
+  min-height: 8vh;
+  font-family: "Raleway", sans-serif;
+  background:transparent ;
+}
+
+.logo {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 0;
+  color: white;
+  letter-spacing: 2px;
+  font-size: 24px;
+  margin-left: 30px;
+  padding-bottom: 6px;
+  width: fit-content;
+  border-bottom: 3px solid white;
+}
+
+.nav-links {
+  background: inherit ;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  transition: transform 0s ease-in;
+  z-index: 30;
+}
+
+.nav-links li {
+  list-style: none;
+  background: inherit;
+  margin-top: 30px;
+  margin-right: 40px;
+  opacity: 0;
+  text-align: end;
 }
 
 .nav-links a {
-    color: white;
-    text-decoration: none;
-    letter-spacing: 1px;
-    font-weight: bold;
-    font-size: 24px;
-    letter-spacing: 2px;
+  background: inherit;
+  color: white;
+  text-decoration: none;
+  letter-spacing: 1px;
+  font-weight: bold;
+  font-size: 24px;
+  letter-spacing: 2px;
 }
 
 @keyframes navLinkFade {
-    from{
-        opacity: 0;
-    }
-    to{
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
-.plus-minus-toggle{
-    cursor: pointer;
-    height: 21px;
-    position: relative;
-    width: 22px;
-    margin-top: 14px;
-    margin-left: 6px;
+.plus-minus-toggle {
+  cursor: pointer;
+  height: 21px;
+  position: relative;
+  width: 22px;
+  margin-top: 14px;
+  margin-left: 6px;
+  
 }
 
-.plus-minus-toggle::before, .plus-minus-toggle::after{
-        background: white;
-        content:'';
-        height: 5px;
-        left: 0;
-        position: absolute;
-        top:0;
-        width: 21px;
-        transition: transform 500ms ease;
+.plus-minus-toggle::before,
+.plus-minus-toggle::after {
+  background: white;
+  content: "";
+  height: 5px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 21px;
+  transition: transform 500ms ease;
 }
-.plus-minus-toggle::after{
-        transform-origin:center;
+.plus-minus-toggle::after {
+  transform-origin: center;
 }
-.plus-minus-toggle.collapsed::after{
-            transform:rotate(90deg);
+.plus-minus-toggle.collapsed::after {
+  transform: rotate(90deg);
 }
-.plus-minus-toggle.collapsed::before{
-            transform:rotate(180deg);
+.plus-minus-toggle.collapsed::before {
+  transform: rotate(180deg);
 }
 
 
-/* bottom right */
 
-.proj-type{
-    position: absolute;
-    display: flex;
-    right: 0px;
-    bottom: 0px;
-    margin: 0px 4% 3% 0px ;
+.select-menu {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 0px 4% 3% 0px;
 }
-.proj-type > p {
-    margin-left: 6px;
-    font-weight: 400;
-    font-size: 20px;
-    letter-spacing: 1px;
+
+
+
+.select::before{
+  margin-top: 0.2em;
+  content: url("data:image/svg+xml,%3Csvg width='17' height='16' viewBox='0 0 17 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9.725 10.4978L14.725 15.4978L16.4833 13.6978L11.4833 8.69776L9.725 10.4978ZM12.825 6.16443C12.5 6.16443 12.15 6.12276 11.875 6.0061L2.38333 15.4561L0.625 13.6978L6.8 7.5311L5.325 6.04776L4.725 6.6311L3.51667 5.4561V7.83943L2.93333 8.42276L0 5.4561L0.583333 4.87276H2.925L1.75833 3.69776L4.725 0.731096C4.95546 0.499393 5.22944 0.315523 5.5312 0.190057C5.83296 0.0645897 6.15653 0 6.48333 0C6.81013 0 7.13371 0.0645897 7.43547 0.190057C7.73722 0.315523 8.01121 0.499393 8.24167 0.731096L6.48333 2.5311L7.65833 3.69776L7.06667 4.28943L8.55833 5.77276L10.075 4.2061C9.95833 3.9311 9.90833 3.5811 9.90833 3.27276C9.90502 2.88803 9.97808 2.50647 10.1233 2.15018C10.2685 1.79389 10.4829 1.46994 10.7542 1.19712C11.0255 0.924288 11.3482 0.707997 11.7037 0.560771C12.0591 0.413546 12.4403 0.338313 12.825 0.33943C13.3167 0.33943 13.75 0.456096 14.1417 0.68943L11.9167 2.91443L13.1667 4.16443L15.3917 1.93943C15.625 2.3311 15.7417 2.74776 15.7417 3.27276C15.7417 4.87276 14.45 6.16443 12.825 6.16443Z' fill='%23ffffff'/%3E%3C/svg%3E");
+  display: inline-block;
 }
-.proj-type > svg{
-    margin-top: 4px;
+
+
+.select > ul {
+  height: 30px;
+  width: 150px;
+  border: 1px #000 solid;
+}
+
+.select ul li{
+  padding: 5px 10px;
+  z-index: 2;
+}
+
+.select ul li:not(.init){
+  float: left;
+  width: 130px;
+  display: none;
+  background: #ddd;
+}
+
+.select ul li:not(.init):hover, .select ul li.selected:not(.init){
+  background-color: #09f;
+}
+
+.select li.init{
+  cursor:pointer;
+}
+
+
+
+
+
+
+.header-footer{
+  display: grid;
+  grid-template-columns: 11fr 1fr;
+}
+
+.empty-grid{
+  background-color: inherit;
+  height: 4rem;
+}
+
+.menu-grid{
+  background-color: green;
+height: 4rem;
+}
+
+
+.content{
+  display: grid;
+  gap: 10px;
+  background-color: black;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  height: calc(100vh - 8rem);
+  width: 100vw;
+}
+
+.first-grid{
+  position: relative;
+}
+
+.first {
+  position: absolute;
+  width: 55%;
+  bottom: -3em;
+  right: 3em;
+  aspect-ratio: 14/16;
+  z-index: 10;
+  background-color: aliceblue;
+}
+
+.second-grid{
+  position: relative;
+}
+
+.second{
+  position: absolute;
+  width: 55%;
+  left: -3em;
+  bottom: 3em;
+  aspect-ratio: 14/16;
+  background-color: antiquewhite;
+  z-index: 10;
+}
+
+.third-grid{
+  position: relative;
+}
+
+.third{
+  position: absolute;
+  width: 55%;
+  right: -3em;
+  top: 3em;
+  aspect-ratio: 14/16;
+  background-color: cadetblue;
+  z-index: 10;
+}
+
+.purpose{
+  position: absolute;
+  bottom: -.25em;
+  left: calc(-3.2em );
+  font-size: 3.5rem;
+  font-weight: 400;
+  font-family: 'Roboto', sans-serif;
+  z-index: 30;
+  background-color: transparent;
+}
+
+.fourth-grid{
+  position: relative;
+}
+
+.fourth{
+  position: absolute;
+  width: 55%;
+  aspect-ratio: 14/16;
+  top: -3em;
+  left: 3em;
+  background-color: beige;
+  z-index: 10;
 }
