--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,18 @@ li {
   font-family: "Raleway", sans-serif;
 }
 
+.first-view{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: 000;
+  z-index: 100000;
+}
+
+
+
+
+
 .select-button > p {
   margin-left: 6px;
 }
